--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1>Upload new File</h1>
+    <h1>Upload new csv files to analize</h1>
     <p>
         {% with messages = get_flashed_messages() %}
           {% if messages %}
