Webapp shows graph in another window

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -28,5 +28,8 @@
             <input type="submit" value="Submit">
         </p>
     </form>
+    <img src="/plot.png/" alt="my plot">
+
+    <button type="button">Reset!</button>
 </body>
 </html>
