Webapp shows graph in the same window and you can change the files

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -28,7 +28,7 @@
             <input type="submit" value="Submit">
         </p>
     </form>
-    <img src="/plot.png/" alt="my plot">
+    <img src="{{ image }}" alt="my plot">
 
     <button type="button">Reset!</button>
 </body>
