Reduced code and added placeholder graph image

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,17 @@
     <title>GermLine Analyzer</title>
 </head>
 <body>
-<h1>
-    Hola
-</h1>
-
+<h3>
+    Hola, Bienvenido a GermLine Analyzer, elija opción
+</h3>
+<ul>
+    <li>
+    <a href="{{ url_for('upload') }}">Gráfica de una estirpe</a>
+    </li>
+    <hr>
+    <li>
+    <a href="#">Gráfica comparativa de varias estirpes</a>
+    </li>
+</ul>
 </body>
 </html>
