Get started section has now functional buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,87 @@
     </nav>
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="jumbotron get-started">
+            <h1 class="display-4">Get started!</h1>
+            <br>
+            <p class="lead">Things that you will need (Press button to expand):
+            <ol>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                Get the Z-stack of your fluorescent protein in the germline
+            </button>
+            </li>
+            <div class="collapse" id="collapse1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                Get the max projection of Z axis using imageJ
+            </button>     <button class="btn btn-outline-primary" type="button">
+                Download imageJ
+            </button></li>
+            <div class="collapse" id="collapse2">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                Mount them using photoshop or similar to form a single germline image (.tif)
+            </button></li>
+            <div class="collapse" id="collapse3">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                With ImageJ, use a segmented line to mark from the start to the end of the gonad length that you want to analize
+            </button></li>
+            <div class="collapse" id="collapse4">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                Select analize -> Plot profile
+            </button></li>
+            <div class="collapse" id="collapse5">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                Save data as .csv
+            </button></li>
+            <div class="collapse" id="collapse6">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            <br>
+            <li> <button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
+                Plot the .csv files (one or multiple strains) in Germline Analyzer
+            </button></li>
+            <div class="collapse" id="collapse7">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+            </ol>
+            </p>
+            <hr class="my-4">
+            <p>If you have any doubt of how to use the website after reading the "Get Started" information:</p>
+            <br>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Contact me</a>
+            </p>
+        </div>
+        <hr class="my-4">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">Plot single strain</h1>
           <div>
           <p>
