--- a/templates/index.html
+++ b/templates/index.html
@@ -58,20 +58,20 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="#getstarted">
               <span data-feather="home"></span>
               Get started
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#plotsingle">
               <span data-feather="file"></span>
               Plot single strain
             </a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#plotmultiple">
               <span data-feather="layers"></span>
               Plot multiple strains
             </a>
@@ -114,7 +114,7 @@
     </nav>
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <div class="jumbotron get-started">
+        <div class="jumbotron get-started" id="getstarted">
             <h1 class="display-4">Get started!</h1>
             <br>
             <p class="lead">Things that you will need (Press button to expand):
@@ -193,8 +193,9 @@
                 <a class="btn btn-primary btn-lg" href="#" role="button">Contact me</a>
             </p>
         </div>
+        <span id="plotsingle"></span>
         <hr class="my-4">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer">
         <h1 class="h2">Plot single strain</h1>
           <div>
           <p>
@@ -212,21 +213,28 @@
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
               <form method="post" action="/" enctype="multipart/form-data">
+                  <div class="row">
+                  <div class="col sm-6">
                   <dl class="choosfilecontainer">
                       <p>
                           <input type="file" class="btn btn-outline-secondary choosebutton" name="files[]" multiple="true" autocomplete="off" required>
                       </p>
                   </dl>
+                  </div>
+                  <div class="col sm-6">
                   <p class="submitbuttoncontainer">
                       <input type="submit" class="btn btn-primary submitbutton" value="Submit">
                   </p>
+                  </div>
+                  </div>
               </form>
           </div>
         </div>
       </div>
 
       <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/graph_icon.png">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <hr class="my-4">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer" id="plotmultiple">
             <h1 class="h2">Plot multiple strains</h1>
             <div>
                 <p>
@@ -244,147 +252,26 @@
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
                     <form method="post" action="/" enctype="multipart/form-data">
-                        <dl class="choosfilecontainer">
-                            <p>
-                                <input type="file" class="btn btn-outline-secondary choosebutton" name="files[]" multiple="true" autocomplete="off" required>
-                            </p>
-                        </dl>
-                        <p class="submitbuttoncontainer">
-                            <input type="submit" class="btn btn-primary submitbutton" value="Submit">
-                        </p>
+                      <div class="row">
+                      <div class="col sm-6">
+                      <dl class="choosfilecontainer">
+                          <p>
+                              <input type="file" class="btn btn-outline-secondary choosebutton" name="files[]" multiple="true" autocomplete="off" required>
+                          </p>
+                      </dl>
+                      </div>
+                      <div class="col sm-6">
+                      <p class="submitbuttoncontainer">
+                          <input type="submit" class="btn btn-primary submitbutton" value="Submit">
+                      </p>
+                      </div>
+                      </div>
                     </form>
                 </div>
             </div>
         </div>
       <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/graph_icon.png">
-      <h2>Section title</h2>
-      <div class="table-responsive">
-        <table class="table table-striped table-sm">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-              <th scope="col">Header</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
-            </tr>
-            <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <h2>Section footer</h2>
     </main>
   </div>
 </div>
