Finished v1 get-started and changed placeholder graphs

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -108,9 +108,17 @@ body {
 }
 
 .get-started{
-  padding: 0% 0% 5%;
+  padding: 5% 0% 5%;
 }
 
 .sectcontainer{
  padding: 5% 0% 0%;
+}
+
+.germlineimg{
+width: 50%;
+}
+
+.stepimg{
+width: 30%;
 }
