--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,16 @@
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
         <div class="jumbotron get-started" id="getstarted">
-            <h1 class="display-4">Get started!</h1>
+            <div class="row justify-content-start">
+                <div class="col-lg-3">
+                    <h1 class="display-4">Get started!</h1>
+                </div>
+                <div class="col-lg-2 donwload-button">
+                    <a href="https://imagej.net/downloads" class="btn btn-outline-primary" type="button">
+                Download imageJ</a>
+                </div>
+            </div>
+
             <br>
             <p class="lead">Things that you will need (Press button to expand):
             <ol>
@@ -109,54 +118,61 @@
             </li>
             <div class="collapse" id="collapse1">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <img class="stepimg" src="../static/images/GetStarted-1.PNG" alt="GetStarted-1.PNG">
                 </div>
             </div>
             <br>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                Get the max projection of Z axis using imageJ
-            </button>     <button class="btn btn-outline-primary" type="button">
-                Download imageJ
+                Get the max projection (.tif) of Z axis using imageJ
             </button></li>
             <div class="collapse" id="collapse2">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <div class="row">
+                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted -2a.png" alt="GetStarted -2a.png"></div>
+                    <div class="col sm-6"><img class="germlineimg" src="../static/images/GetStarted -2b.png" alt="GetStarted -2b.png"></div>
+                    </div>
                 </div>
             </div>
             <br>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                Mount them using photoshop or similar to form a single germline image (.tif)
+                Mount the max projections (Photoshop) to form a single germline image
             </button></li>
             <div class="collapse" id="collapse3">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <p>Save as .tif and open with imageJ for next steps</p>
+                    <br>
+                    <img class="germlineimg" src="../static/images/fullgermline-show.jpg" alt="germline-example.jpg">
                 </div>
             </div>
             <br>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                With ImageJ, use a segmented line to mark from the start to the end of the gonad length that you want to analize
+                Use a segmented line to mark the gonad line that you want to plot
             </button></li>
             <div class="collapse" id="collapse4">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <p>Right click to switch from straight line to segmented line. Double-click to change line width.</p>
+                    <br>
+                    <img class="germlineimg" src="../static/images/GetStarted - 4.PNG" alt="GetStarted - 4.PNG">
                 </div>
             </div>
             <br>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                Select analize -> Plot profile
+                Select Analize -> Plot profile to get the sample graphic
             </button></li>
             <div class="collapse" id="collapse5">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                   <img class="germlineimg" src="../static/images/GetStarted-5.PNG" alt="GetStarted-5.PNG">
                 </div>
             </div>
             <br>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                Save data as .csv
+                Save the sample graph data as .csv
             </button></li>
             <div class="collapse" id="collapse6">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <p>Each file represents the fluorescence intensity of one gonad.</p>
+                    <br>
+                    <img class="germlineimg" src="../static/images/GetStarted-6.PNG" alt="GetStarted-6.PNG">
                 </div>
             </div>
             <br>
@@ -165,7 +181,10 @@
             </button></li>
             <div class="collapse" id="collapse7">
                 <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                     <ul>
+                     <li>"Plot single strain" will group several samples/files of the same strain/experiment.</li>
+                     <li>"Plot multiple strains" will group several samples/files for multiple strains in the same graph.</li>
+                     </ul>
                 </div>
             </div>
             </ol>
@@ -216,7 +235,7 @@
         </div>
       </div>
 
-      <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/graph_icon.png">
+      <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/line-graph.png">
         <hr class="my-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom sectcontainer" id="plotmultiple">
             <h1 class="h2">Plot multiple strains</h1>
@@ -254,7 +273,7 @@
                 </div>
             </div>
         </div>
-      <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/graph_icon.png">
+      <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/line-graph.png">
       <h2>Section footer</h2>
     </main>
   </div>
