--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
   </button>
     <div class="navbar-nav d-none d-md-block">
         <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" href="#">Contact</a>
+            <a class="nav-link px-3" href="mailto:dpuerta@usal.es">Contact</a>
         </div>
     </div>
   </div>
@@ -110,7 +110,7 @@
             </div>
 
             <br>
-            <p class="lead">Things that you will need (Press button to expand):
+            <p class="lead">Follow these steps (Press button to expand):
             <ol>
             <li><button class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
                 Get the Z-stack of your fluorescent protein in the germline
@@ -181,10 +181,14 @@
             </button></li>
             <div class="collapse" id="collapse7">
                 <div class="card card-body">
-                     <ul>
-                     <li>"Plot single strain" will group several samples/files of the same strain/experiment.</li>
-                     <li>"Plot multiple strains" will group several samples/files for multiple strains in the same graph.</li>
-                     </ul>
+                     <div class="row justify-content-start">
+                         <div class="col-6 col-lg-3""><a href="#plotsingle" class="btn btn-outline-primary" type="button"> Plot single strain </a></div>
+                         <div class="col-6 col-lg-3""><a href="#plotmultiple" class="btn btn-outline-primary" type="button">Plot multiple strains</a></div>
+                     </div>
+                     <div class="row justify-content-start">
+                         <div class="col-6 col-lg-3">Will group several samples/files of the same strain/experiment.</div>
+                         <div class="col-6 col-lg-3">Will group several samples/files for multiple strains in the same graph.</div>
+                     </div>
                 </div>
             </div>
             </ol>
@@ -193,7 +197,7 @@
             <p>If you have any doubt of how to use the website after reading the "Get Started" information:</p>
             <br>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Contact me</a>
+                <a class="btn btn-primary btn-lg" href="mailto:dpuerta@usal.es" role="button">Contact me</a>
             </p>
         </div>
         <span id="plotsingle"></span>
@@ -215,7 +219,7 @@
           </div>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
-              <form method="post" action="/" enctype="multipart/form-data">
+              <form method="post" action="/#plotsingle" enctype="multipart/form-data">
                   <div class="row">
                   <div class="col sm-6">
                   <dl class="choosfilecontainer">
@@ -254,7 +258,7 @@
             </div>
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
-                    <form method="post" action="/" enctype="multipart/form-data">
+                    <form method="post" action="/#plotmultiple" enctype="multipart/form-data">
                       <div class="row">
                       <div class="col sm-6">
                       <dl class="choosfilecontainer">
@@ -273,7 +277,7 @@
                 </div>
             </div>
         </div>
-      <img class="img-fluid graph-img" src="{{ image }}" alt="Not Found" onerror=this.src="../static/images/line-graph.png">
+      <img class="img-fluid graph-img" src="{{ image_multiple }}" alt="Not Found" onerror=this.src="../static/images/line-graph.png">
       <h2>Section footer</h2>
     </main>
   </div>
