when you choose number of strains in multiplestrains it redirect you to a new page and pass the number of strains you selected

--- a/templates/multiplestrains.html
+++ b/templates/multiplestrains.html
@@ -18,7 +18,7 @@
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
                     <form method="post" action="/multiplestrains">
-                        <select class="form-select" multiple aria-label="multiple select example">
+                        <select class="form-select" name="strainsn" multiple aria-label="multiple select example">
                             <option selected>Choose number of strains</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
