--- a/templates/footer.html
+++ b/templates/footer.html
@@ -82,8 +82,8 @@
         <div class="collapse" id="collapse7">
             <div class="card card-body">
                 <div class="row justify-content-start">
-                    <div class="col-6 col-lg-3""><a href="#plotsingle" class="btn btn-outline-primary" type="button"> Plot single strain </a></div>
-                <div class="col-6 col-lg-3""><a href="#plotmultiple" class="btn btn-outline-primary" type="button">Plot multiple strains</a></div>
+                    <div class="col-6 col-lg-3""><a href="{{ url_for('index') }}" class="btn btn-outline-primary" type="button"> Plot single strain </a></div>
+                <div class="col-6 col-lg-3""><a href="{{ url_for('multiplestrains') }}" class="btn btn-outline-primary" type="button">Plot multiple strains</a></div>
         </div>
         <div class="row justify-content-start">
             <div class="col-6 col-lg-3">Will group several samples/files of the same strain/experiment.</div>
