--- a/templates/header.html
+++ b/templates/header.html
@@ -64,14 +64,14 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#plotsingle">
+                        <a class="nav-link" href="{{ url_for('index') }}">
                             <span data-feather="file"></span>
                             Plot single strain
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#plotmultiple">
+                        <a class="nav-link" href="{{ url_for('multiplestrains') }}">
                             <span data-feather="layers"></span>
                             Plot multiple strains
                         </a>
@@ -80,7 +80,7 @@
 
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                     <span>LOADED FILES</span>
-                    <a class="link-secondary" href="#plotsingle" aria-label="Plot new files">
+                    <a class="link-secondary" href="#" aria-label="Plot new files">
                         <span data-feather="plus-circle"></span>
                     </a>
                 </h6>
