--- a/new_backend/templates/footer.html
+++ b/new_backend/templates/footer.html
@@ -83,7 +83,7 @@
             <div class="card card-body">
                 <div class="row justify-content-start">
                     <div class="col-6 col-lg-3""><a href="{{ url_for('index') }}" class="btn btn-outline-primary" type="button"> Plot single strain </a></div>
-                <div class="col-6 col-lg-3""><a href="{{ url_for('index') }}" class="btn btn-outline-primary" type="button">Plot multiple strains</a></div>
+                <div class="col-6 col-lg-3""><a href="{{ url_for('multiplestrains') }}" class="btn btn-outline-primary" type="button">Plot multiple strains</a></div>
         </div>
         <div class="row justify-content-start">
             <div class="col-6 col-lg-3">Will group several samples/files of the same strain/experiment.</div>
