updated board form styling, updated todos

--- a/new_webapp/static/css/dashboard.css
+++ b/new_webapp/static/css/dashboard.css
@@ -32,7 +32,15 @@ body {
   }
 }
 
+.fTitle{
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 2% 0 2%;
+}
 
+.slid{
+    margin: 5% 0 5%;
+}
 .sidebar-sticky {
   position: relative;
   top: 0;
@@ -127,4 +135,54 @@ width: 50%;
 
 .stepimg{
 width: 30%;
+}
+
+section.range-slider {
+    position: relative;
+    width: 100%;
+    height: 35px;
+    text-align: center;
+}
+
+section.range-slider input {
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 15px;
+    width: 100%;
+    outline: none;
+    height: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+section.range-slider input::-webkit-slider-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 1;
+    outline: 0;
+}
+
+section.range-slider input::-moz-range-thumb {
+    pointer-events: all;
+    position: relative;
+    z-index: 10;
+    -moz-appearance: none;
+    width: 9px;
+}
+
+section.range-slider input::-moz-range-track {
+    position: relative;
+    z-index: -1;
+    background-color: rgba(0, 0, 0, 1);
+    border: 0;
+}
+section.range-slider input:last-of-type::-moz-range-track {
+    -moz-appearance: none;
+    background: none transparent;
+    border: 0;
+}
+  section.range-slider input[type=range]::-moz-focus-outer {
+  border: 0;
 }
