updated form to receive range for fold increase

--- a/new_webapp/templates/footer.html
+++ b/new_webapp/templates/footer.html
@@ -126,8 +126,8 @@
       // Neither slider will clip the other, so make sure we determine which is larger
       if( slide1 > slide2 ){ var tmp = slide2; slide2 = slide1; slide1 = tmp; }
 
-      var displayElement = parent.getElementsByClassName("rangeValues")[0];
-          displayElement.innerHTML = slide1 + " - " + slide2;
+      var displayElement = parent.parentNode.getElementsByClassName("rangeValues")[0];
+          displayElement.value = slide1 + " - " + slide2;
     }
 
     window.onload = function(){
