--- a/new_webapp/templates/index.html
+++ b/new_webapp/templates/index.html
@@ -81,8 +81,8 @@
 
                   <div class="row">
                       <label for="rslide" class="form-label fTitle">Range of gonad to compare against (only for fold increase)</label>
+                      <input class="rangeValues" name="rslideValues" value="0-4">
                       <section class="range-slider slid" id="rslide">
-                          <span class="rangeValues"></span>
                           <input value="0" min="0" max="100" step="2" type="range">
                           <input value="4" min="0" max="100" step="2" type="range">
                       </section>
