Now application first convert files to dataframes and stores it in cache, then it transforms the dataframes. It allows to perform multiple analysis without reuploading files.

--- a/new_webapp/templates/index.html
+++ b/new_webapp/templates/index.html
@@ -31,7 +31,7 @@
                       <div class="col-sm-5">
                       <dl class="choosfilecontainer">
                           <p>
-                              <input type="file" class="form-control choosebutton" name="files[]" multiple="true" autocomplete="off" required>
+                              <input type="file" class="form-control choosebutton" name="files[]" multiple="true" autocomplete="off">
                           </p>
                       </dl>
                       </div>
