start of reestructuration for database

--- a/new_webapp/templates/header.html
+++ b/new_webapp/templates/header.html
@@ -71,7 +71,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('multiplestrains') }}">
+                        <a class="nav-link" href="{{ url_for('index') }}">
                             <span data-feather="layers"></span>
                             Plot multiple strains
                         </a>
